fixed footer alignment

--- a/style.scss
+++ b/style.scss
@@ -141,4 +141,7 @@ body{
     align-self: flex-end;
 
     color: $navy;
+
+    position: absolute;
+    bottom: 0;
 }
